fixed two null reference issue other minor fixes

--- a/AngularApp/projects/app-service-diagnostics/src/app/shared/components/step-views/check-step-view/check-step.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/shared/components/step-views/check-step-view/check-step.component.html
@@ -2,16 +2,16 @@
     <div class="status-icon">
         <status-icon [loading]="1" [status]="checkStepView.level | convertLevelToHealthStatus"></status-icon>
     </div>
-    <div class="check-title bold" tabindex="0">
+    <div class="check-title bold">
       {{checkStepView.title}}
     </div>
-    <div class="details-link" *ngIf="checkStepView.subChecks.length>0"> <a (click)="toggleSubChecks()"> <i class="{{expanded ? 'ib-dchevup' : 'ib-dchevdown'}}"></i> </a></div>
+    <div class="details-link" *ngIf="checkStepView.subChecks.length>0"> <a tabindex="0" (click)="toggleSubChecks()"> <i class="{{expanded ? 'ib-dchevup' : 'ib-dchevdown'}}"></i> </a></div>
     <div class="subchecks-container" *ngIf="expanded">
       <div class="sub-check" *ngFor="let subCheck of checkStepView.subChecks; let i = index">
         <div class="status-icon">
           <status-icon [loading]="1" [status]="subCheck.level | convertLevelToHealthStatus"></status-icon>
         </div>
-        <div class="check-title" tabindex="0">
+        <div class="check-title">
           {{subCheck.title}}
         </div>
       </div>
