--- a/AngularApp/projects/app-service-diagnostics/src/app/shared/components/step-views/input-step-view/input-step.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/shared/components/step-views/input-step-view/input-step.component.html
@@ -1,7 +1,7 @@
 <div class="input-step step">
-    <p class="input-step-title" tabindex="0">{{inputStepView.title}}</p>
+    <p class="input-step-title">{{inputStepView.title}}</p>
     <div class="input-section">
-        <div class="input-entry" tabindex="0">
+        <div class="input-entry">
             {{inputStepView.entry}}
             <a class="input-tooltip" title="{{inputStepView.tooltip}}" *ngIf="inputStepView.tooltip">
                 <svg width="12" height="12" viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg">
