--- a/AngularApp/projects/diagnostic-data/src/lib/components/web-search/web-search.component.scss
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/web-search/web-search.component.scss
@@ -42,6 +42,7 @@
     padding: 10px;
     background-color: white;
     margin: 10px 0px;
+    overflow-wrap: break-word;
 }
 
 .article > h5 {
@@ -60,4 +61,8 @@
 
 a{
     cursor: pointer;
+}
+
+br{
+   display : none ;
 }
