--- a/AngularApp/projects/applens/src/app/modules/main/main/main.component.html
+++ b/AngularApp/projects/applens/src/app/modules/main/main/main.component.html
@@ -30,7 +30,7 @@
                 <input class="form-control" [(ngModel)]="resourceName" name="resourceName" type="text" aria-describedby="nameHelp" placeholder="Enter resource name">
               </div>
             </div>
-            <div class="form-row" *ngIf="!this.selectedResourceType.caseId">
+            <!-- <div class="form-row" *ngIf="!this.selectedResourceType.caseId">
               <div class="col-md-6">
                 <label>Start Time</label>
                 <input id="startTime" name="startTime" class="form-control input-sm" [(ngModel)]="startTime" [owlDateTimeTrigger]="start"
@@ -42,7 +42,7 @@
                 <input id="endTime" name="endTime" class="form-control input-sm" [(ngModel)]="endTime" [owlDateTimeTrigger]="end" [owlDateTime]="end">
                 <owl-date-time #end></owl-date-time>
               </div>
-            </div>
+            </div> -->
           </div>
           <div class="form-group go-form">
             <fab-primary-button contentStyle="margin-top: 20px;"
