--- a/AngularApp/projects/diagnostic-data/src/lib/components/time-series-instance-graph/time-series-instance-graph.component.html
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/time-series-instance-graph/time-series-instance-graph.component.html
@@ -1,10 +1,10 @@
 <data-container *ngIf="!useHighchart" [title]="renderingProperties.title" [description]="renderingProperties.description">
-    <nvd3-graph [chartData]="selectedSeries" [chartType]="renderingProperties.graphType" [chartOptions]="graphOptions" *ngIf="selectedSeries"></nvd3-graph>
+    <!-- <nvd3-graph [chartData]="selectedSeries" [chartType]="renderingProperties.graphType" [chartOptions]="graphOptions" *ngIf="selectedSeries"></nvd3-graph> -->
     <div *ngIf="!selectedSeries">Loading Data...</div>
 </data-container>
 
 <data-container *ngIf="useHighchart" [title]="renderingProperties.title" [description]="renderingProperties.description">
-    <highcharts-graph [HighchartData]="selectedHighChartSeries" [chartType]="renderingProperties.graphType" [chartOptions]="graphOptions" [xAxisPlotBands]="xAxisPlotBands" 
+    <highcharts-graph [HighchartData]="selectedHighChartSeries" [chartType]="renderingProperties.graphType" [chartOptions]="graphOptions" [xAxisPlotBands]="xAxisPlotBands"
     [zoomBehavior] = "zoomBehavior" (XAxisSelection)="onXAxisSelection($event)">
     </highcharts-graph>
     <div *ngIf="!selectedSeries">Loading Data...</div>
