add detailsMarkdown for check

--- a/AngularApp/projects/app-service-diagnostics/src/app/shared/components/step-views/check-step-view/check.component.scss
+++ b/AngularApp/projects/app-service-diagnostics/src/app/shared/components/step-views/check-step-view/check.component.scss
@@ -22,6 +22,12 @@
         margin-top: -16px;
         padding-right: 5px;
     }
+
+    .expand-icon{
+        float: right;
+        margin-top: -16px;
+        padding-right: 5px;
+    }
 }
 
 .status-icon {
