--- a/AngularApp/projects/app-service-diagnostics/src/app/shared/components/step-views/check-step-view/check.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/shared/components/step-views/check-step-view/check.component.html
@@ -1,14 +1,26 @@
 <div class="check-container">
-    <div class="status-icon">
-        <status-icon [loading]="1" [status]="check.level | convertLevelToHealthStatus"></status-icon>
+  <div class="status-icon">
+      <status-icon [loading]="1" [status]="check.level | convertLevelToHealthStatus"></status-icon>
+  </div>
+  <div class="check-title {{bold ? 'bold':''}}">
+    {{check.title}}
+  </div>
+  <div class="expand-icon" *ngIf="check.subChecks?.length>0; else elseBlock"> <a tabindex="0" (click)="toggleSubChecks()"> <i class="{{expanded ? 'ib-dchevup' : 'ib-dchevdown'}}"></i> </a></div>
+  <ng-template #elseBlock>
+    <div class="details-link" *ngIf="check.detailsMarkdown!=null"> <a tabindex="0" (click)="toggleDetails()"> details </a></div>
+  </ng-template>
+  <div class="subchecks-container" *ngIf="expanded">
+    <div class="sub-check" *ngFor="let subCheck of check.subChecks; let i = index">
+      <check [check]="subCheck"></check> 
     </div>
-    <div class="check-title {{bold ? 'bold':''}}">
-      {{check.title}}
-    </div>
-    <div class="details-link" *ngIf="check.subChecks.length>0"> <a tabindex="0" (click)="toggleSubChecks()"> <i class="{{expanded ? 'ib-dchevup' : 'ib-dchevdown'}}"></i> </a></div>
-    <div class="subchecks-container" *ngIf="expanded">
-      <div class="sub-check" *ngFor="let subCheck of check.subChecks; let i = index">
-        <check [check]="subCheck"></check> 
+  </div>
+  <fab-panel *ngIf="check.detailsMarkdown!=null" [isOpen]="detailsPanelOpened" [type]="7" customWidth="fit-content" [isHiddenOnDismiss]="true"
+  [styles]="{overlay:{visibility: 'hidden'}, content:{minWidth:'300px'}}" [isLightDismiss]="true" [hasCloseButton]="false" 
+  (onDismissed)="detailsPanelDismissedHandler()">
+    <div class="check-markdown">
+      <div class="markdown-container">
+        <div class="markdown"><markdown ngPreserveWhitespaces [data]="check.detailsMarkdown"></markdown></div>
       </div>
     </div>
+  </fab-panel>
 </div>
