--- a/AngularApp/projects/app-service-diagnostics/src/app/shared/components/step-views/check-step-view/check.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/shared/components/step-views/check-step-view/check.component.html
@@ -15,7 +15,7 @@
     </div>
   </div>
   <fab-panel *ngIf="check.detailsMarkdown!=null" [isOpen]="detailsPanelOpened" [type]="7" customWidth="fit-content" [isHiddenOnDismiss]="true"
-  [styles]="{overlay:{visibility: 'hidden'}, content:{minWidth:'300px'}}" [isLightDismiss]="true" [hasCloseButton]="false" 
+  [styles]="{overlay:{visibility: 'hidden'}, content:{minWidth:'300px', maxWidth:'60vw'}}" [isLightDismiss]="true" [hasCloseButton]="false" 
   (onDismissed)="detailsPanelDismissedHandler()">
     <div class="check-markdown">
       <div class="markdown-container">
