--- a/AngularApp/projects/app-service-diagnostics/src/app/fabric-ui/components/fabric-feedback/fabric-feedback.component.scss
+++ b/AngularApp/projects/app-service-diagnostics/src/app/fabric-ui/components/fabric-feedback/fabric-feedback.component.scss
@@ -105,3 +105,14 @@ $panel-padding-right: 20px;
     padding-left: $panel-padding-left;
     padding-right: $panel-padding-right;
 }
+
+::ng-deep {
+    .ms-Panel-header {
+        padding-left: $panel-padding-left;
+        padding-right: $panel-padding-right;
+    }
+
+    .ms-Panel-headerText {
+        font-weight: 600;
+    }
+}
