--- a/AngularApp/projects/app-service-diagnostics/src/app/fabric-ui/components/create-storage-account-panel/create-storage-account-panel.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/fabric-ui/components/create-storage-account-panel/create-storage-account-panel.component.html
@@ -36,7 +36,7 @@
     <div class="col-md-6" *ngIf="createNewMode">
       <fab-text-field [value]="newStorageAccountName" (onChange)="updateStorageAccount($event)">
       </fab-text-field>
-      
+
     </div>
     <div class="col-md-6" *ngIf="!createNewMode">
       <fab-dropdown *ngIf="!loadingStroageAccounts" id="chooseStorageAccount" role="combobox"
@@ -63,7 +63,7 @@
 
   <div class="footer">
     <hr style="margin-bottom: 20px;">
-    <fab-primary-button contentStyle="margin-left:10px;margin-right:10px" (click)="saveChanges()">
+    <fab-primary-button styles="margin-left:10px;margin-right:10px" (click)="saveChanges()">
       Save
     </fab-primary-button>
     <fab-default-button (click)="dismissedHandler()">
