--- a/AngularApp/projects/app-service-diagnostics/src/app/home/components/home/home.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/home/components/home/home.component.html
@@ -108,7 +108,7 @@
 
 
 <ng-template #newHomePage>
-  <fab-command-bar tabindex="0" contentClass="fab-command-bar-class">
+  <fab-command-bar tabindex="0" className="fab-command-bar-class">
     <items>
       <fab-command-bar-item key="askGenie" text="Ask Genie" [iconProps]="{ iconName: 'ChatInviteFriend' }"
         (click)="openGeniePanel()" data-track-type="run"></fab-command-bar-item>
