--- a/AngularApp/projects/app-service-diagnostics/src/app/shared/components/step-views/input-step-view/input-step.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/shared/components/step-views/input-step-view/input-step.component.html
@@ -11,7 +11,7 @@
         </div>
         <input class="input-box" placeholder="{{inputStepView.placeholder}}" title="{{inputStepView.tooltip}}" [(ngModel)]="inputStepView.text">
         <div class="input-error"><i class="ib-redx input-error-icon" *ngIf="inputStepView.error!=null"></i><div>{{inputStepView.error}}&nbsp;</div></div>
-        <fab-primary-button contentClass="input-check-button" (click)="inputStepView.callback(inputStepView.text)">
+        <fab-primary-button className="input-check-button" (click)="inputStepView.callback(inputStepView.text)">
             {{inputStepView.buttonText}}
         </fab-primary-button>
     </div>
@@ -23,7 +23,7 @@
                     <i class="ib-info"></i>
                 </fab-tooltip-host>
             </a>
-        </div> 
+        </div>
         <div class="input-content">{{inputStepView.text}}</div>
         <a class="input-expand" (click)="expand()">
             <i class="ib-pencil"></i>
