--- a/AngularApp/projects/diagnostic-data/src/lib/components/fab-data-table-filter/fab-data-table-filter.component.html
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/fab-data-table-filter/fab-data-table-filter.component.html
@@ -1,4 +1,4 @@
-<fab-default-button [id]="filterId" (click)="toggleCallout()" contentStyle="color: #323130; border-radius: 12px; margin:0px 5px;background:rgba(0, 120, 212, 0.1);font-size:13;font-weight:600;" [ariaLabel]="displayName">{{displayName}}</fab-default-button>
+<fab-default-button [id]="filterId" (click)="toggleCallout()" styles="color: #323130; border-radius: 12px; margin:0px 5px;background:rgba(0, 120, 212, 0.1);font-size:13;font-weight:600;" [ariaLabel]="displayName">{{displayName}}</fab-default-button>
 <fab-callout  *ngIf="isCallOutVisible" (onDismiss)="closeCallout()" [setInitialFocus]="true" [target]="filterSelector">
   <div class="filter-callout-container" (keyup.escape)="closeCallout()">
     <ng-container *ngIf="filterOption === TableFilterSelectionOption.Multiple else singleSelection">
@@ -13,7 +13,7 @@
   <div class="filter-callout-footer">
     <fab-primary-button (onClick)="updateTableWithOptions()" (keyup.enter)="updateTableWithOptions()" [ariaLabel]="'Apply'">Apply
     </fab-primary-button>
-    <fab-default-button contentStyle="margin-left: 8px;" (onClick)="closeCallout()" (keyup.enter)="closeCallout()" [ariaLabel]="'Cancel'">Cancel</fab-default-button>
+    <fab-default-button styles="margin-left: 8px;" (onClick)="closeCallout()" (keyup.enter)="closeCallout()" [ariaLabel]="'Cancel'">Cancel</fab-default-button>
   </div>
 </fab-callout>
 
