--- a/AngularApp/projects/diagnostic-data/src/lib/components/time-series-graph/time-series-graph.component.html
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/time-series-graph/time-series-graph.component.html
@@ -1,14 +1,14 @@
 <ng-template #graphView>
   <!-- <nvd3-graph [chartData]="selectedSeries" [chartType]="renderingProperties.graphType" [chartOptions]="graphOptions"
     *ngIf="selectedSeries" [startTime]="startTime" [endTime]="endTime"></nvd3-graph> -->
-  <div *ngIf="!selectedSeries">Loading Data...</div>
+  <!-- <div *ngIf="!selectedSeries">Loading Data...</div> -->
 </ng-template>
 
 <ng-template #highchartGraphView>
 <highcharts-graph [HighchartData]="selectedHighChartSeries" [chartDescription]="renderingProperties.description" [chartType]="renderingProperties.graphType" [chartOptions]="graphOptions"
 [xAxisPlotBands]="xAxisPlotBands" [zoomBehavior] = "zoomBehavior" (XAxisSelection)="onXAxisSelection($event)">
 </highcharts-graph >
-  <div *ngIf="!selectedSeries">Loading Data...</div>
+  <div *ngIf="!selectedHighChartSeries">Loading Data...</div>
 </ng-template>
 
 <div *ngIf="!useHighchart">
