--- a/AngularApp/projects/app-service-diagnostics/src/app/shared/components/tools/crash-monitoring/crash-monitoring.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/shared/components/tools/crash-monitoring/crash-monitoring.component.html
@@ -128,7 +128,7 @@
           </div>
 
           <div class="mt-3 ml-3">
-            <fab-primary-button contentStyle="margin-right:10px;float:left" [disabled]="monitoringEnabled"
+            <fab-primary-button styles="margin-right:10px;float:left" [disabled]="monitoringEnabled"
               (onClick)="startMonitoring()">
               Start monitor
             </fab-primary-button>
