--- a/AngularApp/projects/applens/src/app/modules/main/main/main.component.html
+++ b/AngularApp/projects/applens/src/app/modules/main/main/main.component.html
@@ -45,7 +45,7 @@
             </div> -->
           </div>
           <div class="form-group go-form">
-            <fab-primary-button contentStyle="margin-top: 20px;"
+            <fab-primary-button styles="margin-top: 20px;"
                 [disabled]="!(resourceName && resourceName.length > 0)" type="Submit" text='Go'>
             </fab-primary-button>
           </div>
