Installed fluent ui

--- a/AngularApp/projects/applens/src/app/modules/main/main/main.component.html
+++ b/AngularApp/projects/applens/src/app/modules/main/main/main.component.html
@@ -48,6 +48,8 @@
             <fab-primary-button styles="margin-top: 20px;"
                 [disabled]="!(resourceName && resourceName.length > 0)" type="Submit" text='Go'>
             </fab-primary-button>
+            <fab-primary-button className="ml-2" text='Enable'>
+            </fab-primary-button>
           </div>
         </form>
         <div class = "error-msg-container">
