use ngx translator

--- a/AngularApp/projects/app-service-diagnostics/src/app/app.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/app.component.html
@@ -1,4 +1,5 @@
 <tabs>
+  <div>{{'Troubleshooting categories' | translate}}</div>
     <generic-comms></generic-comms>
     <router-outlet></router-outlet>
 </tabs>
