--- a/AngularApp/projects/app-service-diagnostics/src/app/fabric-ui/components/fabric-search-results/fabric-search-results.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/fabric-ui/components/fabric-search-results/fabric-search-results.component.html
@@ -33,7 +33,7 @@
       <div class="result-count" style="padding-bottom: 8px;">
         {{inputAriaLabel}}
         <a *ngIf="features.length === 0" tabindex="0" (mousedown)="openGeniePanel()"
-          (keyup.enter)="openGeniePanel()">Ask chatbot Genie</a>
+          (keyup.enter)="openGeniePanel()">{{"fabric-search-results| Ask chatbot Genie" | translate}}</a>
       </div>
     </div>
   </div>
