--- a/AngularApp/projects/app-service-diagnostics/src/app/fabric-ui/components/category-overview/category-overview.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/fabric-ui/components/category-overview/category-overview.component.html
@@ -3,7 +3,7 @@
     <h2><span class="blade-title">{{categoryName}}</span><span class="blade-description"> -
         {{categoryDescription}}</span></h2>
     <p class="category-description" *ngIf="categoryId!=='navigator' && categoryId!=='DiagnosticTools'">
-      If you have a specific problem you want to investigate, click a topic in the left navigation or click Ask Genie.
+      {{"category-overview.If you have a specific problem you want to investigate, click a topic in the left navigation or click Ask Genie."|translate}}
     </p>
   </div>
   <div style="margin-left: -20px;margin-top: 10px;">
