Add all the language resource files used for ASD in last 90 days

--- a/AngularApp/projects/app-service-diagnostics/src/app/fabric-ui/components/category-overview/category-overview.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/fabric-ui/components/category-overview/category-overview.component.html
@@ -1,7 +1,7 @@
 <div class="category-container" style="width:100%">
   <div>
-    <h2><span class="blade-title">{{categoryName}}</span><span class="blade-description"> -
-        {{categoryDescription}}</span></h2>
+    <h2><span class="blade-title">{{categoryName | translate}}</span><span class="blade-description"> -
+        {{categoryDescription | translate}}</span></h2>
     <p class="category-description" *ngIf="categoryId!=='navigator' && categoryId!=='DiagnosticTools'">
       {{"category-overview.If you have a specific problem you want to investigate, click a topic in the left navigation or click Ask Genie."|translate}}
     </p>
