--- a/AngularApp/projects/diagnostic-data/src/lib/components/notification-rendering/notification-rendering.component.scss
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/notification-rendering/notification-rendering.component.scss
@@ -26,7 +26,7 @@
     font-size: 13px!important;
     line-height: normal;
     line-height: 18px;
-    max-height: 160px;
+    max-height: 33%;
     overflow: hidden;
     position: relative;
     padding-top: 5px;
